objects/SCP_Certa_GC__PastProvenValueNew__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>GAP_Past_Proven_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Challenge_Addressed__c</fullName>
        <label>Challenge Addressed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Final_Delivery_Date__c</fullName>
        <label>Final Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Micro_Industry__c</fullName>
        <label>Micro Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Opportunity__c</fullName>
        <label>Project/Capability Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Title__c</fullName>
        <label>Titulo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Type__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Casos de exito en la cuenta</fullName>
                </value>
                <value>
                    <fullName>Diferenciadores competitivos en la cuenta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Unique_Value__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>SCP_Certa_GC__Region__c</referenceTo>
        <relationshipName>GAP_Past_Proven_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SCP Past Proven Value</label>
    <listViews>
        <fullName>SCP_Certa_GC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>GAP Past Proven Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Past Proven Value</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>